# crawl4ai-client-rust

./: Cargo.toml  README.md
.github/workflows/: build.yml  publish.yml
api/: crawl4ai-openapi.json
scripts/: check_dirty_files.sh  generate_api_sdk.sh  generate_templates.sh
templates/: model.mustache
templates/reqwest/: api.mustache  api_mod.mustache
templates/reqwest-trait/: api.mustache  api_mod.mustache
tests/: default_api_health_test.rs
